@@ -1,2 +1,7 @@
-Find the package that supplies the given command or file.
+Search package contents (i.e. file paths)
 $ wajig whichpkg
+
+This uses 'dpkg --search' which searches if the package is
+locally installed. If not found, it searches using the slower
+'apt-file search' if installed. This tool is capable of
+searching for uninstalled package contents.
